# actix-token-auth

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile.dev
api/migrations/: 20201125235509_create_users_table.sql  20201203004749_create_person_access_tokens_table.sql
api/src/: main.rs
api/src/handlers/: mod.rs
api/src/models/: token.rs  user.rs
api/src/requests/: token.rs  user.rs
migrations/: 20201125235458_create_track_row_update.sql  20201125235509_create_users_table.sql  20201203004749_create_person_access_tokens_table.sql
src/: error.rs  errors.rs  lib.rs  main.rs  utils.rs
src/handlers/: cookie_handler.rs  mod.rs  token_handler.rs  user_handler.rs
src/http/: errors.rs  mod.rs
src/http/handlers/: auth_handler.rs  user_handler.rs
src/http/requests/: user.rs
src/models/: mod.rs  token.rs  user.rs
src/requests/: token.rs  user.rs
web/: .env.example  .eslintrc.js  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.js
web/src/: App.vue  router.js
web/src/components/: Home.vue  Login.vue  Register.vue
web/src/services/: http.js
