[package]
name = "rcs"
version = "0.1.0"
authors = ["Robb Currall <rlcurra@castlebranch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.3"
actix-identity = "0.3.1"
actix-web = "3.3.0"
rust-argon2 = "0.8.3"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
dotenv = "0.15.0"
fern = "0.6.0"
futures = "0.3.8"
lazy_static = "1.4.0"
log = "0.4.11"
serde = "1.0.117"
serde_json = "1.0.59"
sqlx = { version = "0.4.1", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
time = "0.2.23"
